--- a/project.config.json
+++ b/project.config.json
@@ -26,7 +26,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -39,6 +39,11 @@
 					"name": "记录页模式",
 					"pathName": "pages/TSL/TSL",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "主页编译",
+					"pathName": "pages/TSLPanel/TSLPanel"
 				}
 			]
 		}
