--- a/project.config.json
+++ b/project.config.json
@@ -21,12 +21,16 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -43,7 +47,14 @@
 				{
 					"id": -1,
 					"name": "主页编译",
-					"pathName": "pages/TSLPanel/TSLPanel"
+					"pathName": "pages/TSLPanel/TSLPanel",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "番茄钟编译",
+					"pathName": "pages/Tomato/Tomato",
+					"query": ""
 				}
 			]
 		}
